--- a/participate/action.html
+++ b/participate/action.html
@@ -69,10 +69,10 @@
         }
 
         .main-button {
-            padding: 16px 0px;
+            padding: 16px 40px;
             border-radius: 5px;
             margin: 0 5px;
-            width: 10vw;
+            width: 90%;
             background-color: white;
             border: none;
             color: var(--main-color);
@@ -82,6 +82,7 @@
             margin-bottom: 30px;
             min-width: 100px;
             outline: none;
+            overflow-wrap: break-word;
         }
 
         .main-button:hover {
@@ -124,7 +125,7 @@
             grid-template-columns: 50% 50%;
             justify-items: center;
             align-items: center;
-            width: 70%;
+            width: 90%;
 
         }
 
