--- a/create/main2.html
+++ b/create/main2.html
@@ -293,7 +293,7 @@
                             <label for="user_email" class="login-label-1">Email</label>
                             <input type="email" name="" id="user_email" placeholder="Email">
                             <label for="user_pass" class="login-label-2">Password</label>
-                            <input type="text" id="user_pass" placeholder="Password">
+                            <input type="password" id="user_pass" placeholder="Password">
                             <button id="login_button" class="main-button">Login</button>
                         </form>
                         <div class="choose-theme">
