--- a/create/main2.html
+++ b/create/main2.html
@@ -65,10 +65,10 @@
                             </div>
                             <div class="history-grid">
                                 <div class="this-event">
-                                    <p>Events</p>
-                                    <p>Last updated</p>
-                                    <p>No. of participants</p>
-                                    <p>Exports</p>
+                                    <p><strong>Events</strong></p>
+                                    <p><strong>Event Code</strong></p>
+                                    <p><strong>No. of participants</strong></p>
+                                    <p><strong>Exports</strong></p>
                                 </div>
                             </div>
                         </div>
@@ -306,6 +306,7 @@
                     </div>
                 </div>
             </div>
+            <div class="notify"></div>
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
