--- a/participate/action.html
+++ b/participate/action.html
@@ -7,7 +7,6 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <style>
-
         :root {
             --main-color: #2784FB;
             --main-shadow: -5px -5px 10px rgba(255, 255, 255, 0.05), 5px 5px 15px rgba(0, 0, 0, .2);
@@ -139,6 +138,50 @@
             color: #707070;
         }
 
+        .not-show {
+            display: none;
+        }
+
+
+        ::-webkit-scrollbar {
+            background-color: #fff;
+            width: 10px;
+        }
+
+        /* background of the scrollbar except button or resizer */
+        ::-webkit-scrollbar-track {
+            background-color: #fff;
+        }
+
+        ::-webkit-scrollbar-track:hover {
+            background-color: #fff;
+        }
+
+        /* scrollbar itself */
+        ::-webkit-scrollbar-thumb {
+            background-color: #babac0;
+            border-radius: 10px;
+            border: 2px solid #fff;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: #a0a0a5;
+            border: 2px solid #f4f4f4;
+        }
+
+        /* set button(top and bottom of the scrollbar) */
+        ::-webkit-scrollbar-button {
+            display: none
+        }
+
+        .submit {
+            width: 30%;
+            font-size: 1rem;
+            margin-top: 30px;
+        }
+        .feedback_info{
+            width: 100%;
+        }
         @media only screen and (max-width: 600px) {
             .main-container {
                 width: 90%;
@@ -164,7 +207,7 @@
             }
 
             input {
-                width: 70%;
+                width: 90%;
             }
 
             .main-button {
@@ -175,6 +218,13 @@
                 margin-bottom: 30px;
                 min-width: 0;
                 font-size: 1rem;
+            }
+            .feedback_info{
+                width: 80%;
+            }
+            .submit{
+                width: 70%;
+                margin-top: 30px;
             }
         }
     </style>
@@ -190,8 +240,11 @@
                 <h1 class="question" id="question"></h1>
                 <p class="text">Select the most appropriate option</p>
                 <div class="options-div">
-
+                    <textarea class="feedback_info not-show" name="" id="" cols="" rows="15"
+                        placeholder="Enter your feedback"
+                        style=" background: lightblue; border-radius: 5px; padding: 10px; outline: none;"></textarea>
                 </div>
+                <button class="main-button submit not-show">Submit Feedback</button>
             </div>
         </div>
     </main>
@@ -212,7 +265,12 @@
         let quiz_id, action_type, theQuestion, theQuestionId, currentOptions,
             questions = [], options = [], options_rendering = [];
         let socket;
-
+        let feedbackData = {}, feedbackQuestions = [];
+        const questionDiv = document.querySelector("#question");
+        const options_div = document.querySelector(".options-div")
+        const submitBtn = document.querySelector(".submit");
+        const feedbackInfo = document.querySelector(".feedback_info");
+        let feedbackNo = 0;
         let fetchQuestions = () => {
             var requestOptions = {
                 method: 'GET',
@@ -232,11 +290,24 @@
                         console.log("Error")
                     }
                     else {
-                        if(result["isOpen"] == true){
-                            quiz = result;
-                            getQuiz();
+                        console.log(result)
+                        if (result["isOpen"] == true) {
+                            if (result["action_type"] == "Feedback") {
+                                feedbackData = result;
+                                getFeedback();
+                                console.log(feedbackData)
+                                document.querySelector(".text").innerHTML = "Please provide your Feedback";
+                                options_div.style.gridTemplateColumns = "auto";
+                                feedbackInfo.classList.remove("not-show")
+                                submitBtn.classList.remove("not-show")
+
+                            }
+                            else {
+                                quiz = result;
+                                getQuiz();
+                            }
                         }
-                        else{
+                        else {
                             console.log("action is not open")
                         }
                     }
@@ -244,6 +315,67 @@
                 .catch(error => console.log('error', error));
         }
         fetchQuestions();
+
+
+        let renderFeedback = (question) => {
+            if (feedbackNo > (feedbackQuestions.length-1)) {
+                questionDiv.innerHTML = "Thank you for your feedback";
+                document.querySelector(".text").innerHTML = "";
+                feedbackInfo.classList.add("not-show");
+                submitBtn.classList.add("not-show");
+            }
+            else {
+                questionDiv.innerHTML = question;
+                feedbackInfo.value = "";
+                submitBtn.value = feedbackData["_id"];
+                submitBtn.id = feedbackData["Questions"][feedbackNo]["_id"];
+            }
+        }
+
+        function submitFeedback(e) {
+            e.preventDefault();
+
+            var myHeaders = new Headers();
+            myHeaders.append("Content-Type", "application/json");
+
+            var raw = JSON.stringify({ "option": feedbackInfo.value });
+
+            var requestOptions = {
+                method: 'POST',
+                headers: myHeaders,
+                body: raw,
+                redirect: 'follow'
+            };
+            let url = "https://mighty-sea-62531.herokuapp.com/api/options/addOption/" + this.value + "/" + this.id;
+            console.log(url)
+            fetch(url, requestOptions)
+                .then(response => response.text())
+                .then(result => { console.log(result); feedbackNo++; renderFeedback(feedbackQuestions[feedbackNo]) })
+                .catch(error => console.log('error', error));
+        }
+        submitBtn.addEventListener("click", submitFeedback)
+
+
+        let getFeedback = () => {
+            feedbackData["Questions"].forEach(question => {
+                feedbackQuestions.push(question["name"])
+            })
+            console.log(feedbackQuestions)
+            renderFeedback(feedbackQuestions[0]);
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         //Logging quiz variables
         let showQuiz = () => {
@@ -339,9 +471,9 @@
         //Rendering the quiz
         let renderQuiz = (question) => {
             let i = 0;
-            const questionDiv = document.querySelector("#question");
+
             questionDiv.innerHTML = question["name"];
-            let options_div = document.querySelector(".options-div")
+
             options_div.innerHTML = "";
             question["options"].forEach(opt => {
                 let button = document.createElement("button");
