--- a/participate/event2.html
+++ b/participate/event2.html
@@ -218,7 +218,7 @@
                         }
                     })
                     .catch(error => console.log('error', error));
-                if(index == action.length){
+                if(index == actions.length){
                     activeActionsDiv.innerHTML = "No Active Actions"
                 }
             })
