--- a/participate/action.html
+++ b/participate/action.html
@@ -426,6 +426,9 @@
                             options: []
                         })
                         document.querySelector(".text").innerHTML = "";
+                        setTimeout(()=>{
+                            window.location.href = "event2.html";
+                        },2000)
                     }
                 })
             })
