--- a/participate/event2.html
+++ b/participate/event2.html
@@ -218,7 +218,7 @@
 
 
 
-                            /* window.location.href = "action.html?id=" + result["_id"]; */
+                            window.location.href = "action.html?id=" + result["_id"];
                         }
                         else {
                             i++;
