--- a/create/main2.html
+++ b/create/main2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/main2.css">
     <title>Document</title>
 </head>
@@ -64,14 +65,15 @@
                                 <img src="../img/Group 130.svg" alt="" class="history-icon">
                                 <button class="invert-btn home add-event-btn main-button">+ Add Event</button>
                             </div>
-                            <div class="history-grid">
-                                <div class="this-event">
+                            <ul class="history-grid collapsible">
+                                <li class="event">
                                     <p><strong>Events</strong></p>
                                     <p><strong>Event Code</strong></p>
                                     <p><strong>No. of participants</strong></p>
-                                    <p><strong>Exports</strong></p>
-                                </div>
-                            </div>
+                                    <p><strong></strong></p>
+                                </li>
+                                
+                            </ul>
                         </div>
                     </div>
                     <div class="not-logged-in show">
@@ -324,6 +326,7 @@
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
     <script>
         if (window.innerWidth < 600) {
