the changes are pushed

--- a/create/main2.html
+++ b/create/main2.html
@@ -72,7 +72,6 @@
                                     <p><strong>No. of participants</strong></p>
                                     <p><strong></strong></p>
                                 </li>
-                                
                             </ul>
                         </div>
                     </div>
@@ -90,6 +89,7 @@
                             <div class="quiz-result-buttons">
                                 <button id="nxtq" class="main-button">Next Question</button>
                                 <button id="close_quiz" class="main-button">Close Quiz</button>
+                                <button id="reset_stat" class="main-button">Clear Responses</button>
                             </div>
                             
                         </div>
