--- a/create/main2.html
+++ b/create/main2.html
@@ -54,9 +54,9 @@
                                 <p id="event_code" class="event-code"></p>
                                 <div class="add-action">
                                     <h1>Add Action</h1>
-                                    <button class="action-btn main-button">Quiz</button>
-                                    <button class="action-btn main-button">Feedback</button>
-                                    <button class="action-btn main-button">Poll</button>
+                                    <button class="main-button" onclick='goTo(quizSelector); quizSelector.forEach(ele => {ele.style.color = "black"; ele.addEventListener("click", selectItem);})'>Quiz</button>
+                                    <button class="main-button" onclick='goTo(feedbackSelector); feedbackSelector.forEach(ele => { ele.style.color = "black"; ele.addEventListener("click", selectItem); })'>Feedback</button>
+                                    <button class="main-button" onclick='goTo(pollSelector); pollSelector.forEach(ele => { ele.style.color = "black"; ele.addEventListener("click", selectItem); })'>Poll</button>
                                 </div>
                             </div>
                         </div>
@@ -74,6 +74,7 @@
                                 </li>
                             </ul>
                         </div>
+
                     </div>
                     <div class="not-logged-in show">
                         Please login to use these features
@@ -94,7 +95,7 @@
                             
                         </div>
                         <div class="quiz-create create show-select">
-                            <form action="" method="post" class="quiz-create-container" id="question_form">
+                            <form action="" method="post" class="quiz-create-container Quiz-internal show-action" id="question_form">
                                 <label for="question_name">Question</label>
                                 <input type="text" id="question_name" class="main-input" placeholder="Enter Question">
                                 <label for="correct_option">Correct Option</label>
@@ -160,7 +161,15 @@
                                     <button class="invert-btn quiz main-button publish-btn" id="publish_quiz">Publish Quiz</button>
                                 </div>
                             </form>
+                            <div class="Quiz-name">
+                                <form action="" method="post" class="name-div">
+                                    <label for="Quiz_name">Title</label>
+                                    <input type="text" id = "Quiz_name" class="main-input" placeholder="Enter Quiz Name">
+                                    <button class="main-button action-btn Quiz">Make quiz</button>
+                                </form>
+                            </div>
                         </div>
+                        
                     </div>
                     <div class="not-logged-in show">
                         Please login to use these features
@@ -179,7 +188,7 @@
                             </div>
                         </div>
                         <div class="poll-create create show-select">
-                            <form action="" method="post" class="poll-create-container" id="poll_form">
+                            <form action="" method="post" class="poll-create-container Poll-internal show-action" id="poll_form">
                                 <label for="poll_name">Question</label>
                                 <input type="text" id="poll_name" class="main-input" placeholder="Enter Question">
                                 <label for="poll_options">Options</label>
@@ -242,6 +251,13 @@
                                     <button class="invert-btn poll main-button publish-btn" id="publish_poll">Publish Poll</button>
                                 </div>
                             </form>
+                            <div class="Poll-name">
+                                <form action="" method="post" class="name-div">
+                                    <label for="Poll_name">Title</label>
+                                    <input type="text" id = "Poll_name" class="main-input" placeholder="Enter Poll Name">
+                                    <button class="main-button action-btn Poll">Make quiz</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="not-logged-in show">
@@ -268,7 +284,7 @@
                             </div>
                         </div>
                         <div class="feedback-create create show-select">
-                            <form action="" method="post" class="feedback-create-container">
+                            <form action="" method="post" class="feedback-create-container Feedback-internal show-action">
                                 <label for="feedback_name">Question</label>
                                 <textarea rows="3" type="text" id="feedback_name" class="main-input"
                                     placeholder="Enter Feedback Question"></textarea>
@@ -295,6 +311,13 @@
                                         Feedback</button>
                                 </div>
                             </form>
+                            <div class="Feedback-name">
+                                <form action="" method="post" class="name-div">
+                                    <label for="Feedback_name">Title</label>
+                                    <input type="text" id = "Feedback_name" class="main-input" placeholder="Enter Feedback Name">
+                                    <button class="main-button action-btn Feedback">Make quiz</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                     <div class="not-logged-in show">
