debugging and some error handling

--- a/create/main2.html
+++ b/create/main2.html
@@ -54,12 +54,9 @@
                                 <p id="event_code" class="event-code"></p>
                                 <div class="add-action">
                                     <h1>Add Action</h1>
-                                    <button class="main-button action-redirect"
-                                        onclick='goTo(quizSelector); quizSelector.forEach(ele => {ele.style.color = "black"; ele.addEventListener("click", selectItem);})'>Quiz</button>
-                                    <button class="main-button action-redirect"
-                                        onclick='goTo(feedbackSelector); feedbackSelector.forEach(ele => { ele.style.color = "black"; ele.addEventListener("click", selectItem); })'>Feedback</button>
-                                    <button class="main-button action-redirect"
-                                        onclick='goTo(pollSelector); pollSelector.forEach(ele => { ele.style.color = "black"; ele.addEventListener("click", selectItem); })'>Poll</button>
+                                    <button class="main-button action-redirect">Quiz</button>
+                                    <button class="main-button action-redirect">Feedback</button>
+                                    <button class="main-button action-redirect">Poll</button>
                                 </div>
                             </div>
                         </div>
