--- a/create/main2.html
+++ b/create/main2.html
@@ -285,7 +285,7 @@
                                         </button>
                                     </div>
                                     <div class="poll-actions">
-                                        <button id="add_poll_btn" class="main-button poll">+ Add Poll</button>
+                                        <button id="add_poll_btn" class="main-button poll">+ Add Poll Question</button>
                                         <button class="main-button review-btn poll">Review Poll</button>
                                     </div>
                                 </form>
