--- a/participate/action.html
+++ b/participate/action.html
@@ -230,6 +230,9 @@
                 width: 70%;
                 margin-top: 30px;
             }
+            .not-show{
+                display: none;
+            }
         }
     </style>
 </head>
