--- a/create/main2.html
+++ b/create/main2.html
@@ -409,13 +409,13 @@
                             <input type="password" id="user_pass" placeholder="Password">
                             <button id="login_button" class="main-button">Login</button>
                         </form>
-                        <div class="choose-theme">
+                        <!-- <div class="choose-theme">
                             <h1>Choose a Theme</h1>
                             <button id="red_theme"></button>
                             <button id="green_theme"></button>
                             <button id="blue_theme"></button>
                             <button id="dark_theme"></button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
