taking out a button

--- a/create/main2.html
+++ b/create/main2.html
@@ -354,13 +354,13 @@
                                                     d="M0,0H42V18H0Z" fill="#2784FB" /> </svg>
                                             <p class="theme-text">One by one</p>
                                         </button>
-                                        <button class="main-button theme-btn feedback cont cont-feedback">
+                                        <!-- <button class="main-button theme-btn feedback cont cont-feedback">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="42" height="18"
                                                 viewBox="0 0 42 18">
                                                 <path class="cont-feedback-white icon" id="Path_106"
                                                     data-name="Path 106" d="M0,0H42V18H0Z" fill="#2784FB" /> </svg>
                                             <p class="theme-text">continuous</p>
-                                        </button>
+                                        </button> -->
                                     </div>
                                     <div class="feedback-actions">
                                         <button id="add_feedback_btn" class="main-button feedback">+ Add
