a lot of changes

--- a/create/main2.html
+++ b/create/main2.html
@@ -299,7 +299,7 @@
                                             <p>Alterations</p>
                                         </div>
                                         <div class="extra-poll-deets">
-                                            
+
                                         </div>
                                     </div>
                                     <button class="invert-btn poll main-button publish-btn" id="publish_poll">Publish
@@ -341,7 +341,8 @@
                         </div>
                         <div class="feedback-create create show-select">
                             <div action="" method="post" class="Feedback-internal show-action">
-                                <form action="" method="post" class="feedback-create-container show-action" id="feedback_form">
+                                <form action="" method="post" class="feedback-create-container show-action"
+                                    id="feedback_form">
                                     <label for="feedback_name">Question</label>
                                     <textarea rows="3" type="text" id="feedback_name" class="main-input"
                                         placeholder="Enter Feedback Question"></textarea>
@@ -369,7 +370,8 @@
                                     </div>
                                 </form>
                                 <div class="feedback-summary">
-                                    <button class="back-btn feedback form-btn"><img src="../img/back.png" alt=""></button>
+                                    <button class="back-btn feedback form-btn"><img src="../img/back.png"
+                                            alt=""></button>
                                     <div class="current-feedback-deets">
                                         <h1 class="feedback-title">Quiz title: </h1>
                                         <div class="question-deets first-deet">
@@ -381,7 +383,8 @@
 
                                         </div>
                                     </div>
-                                    <button class="invert-btn feedback main-button publish-btn" id="publish_feedback">Publish
+                                    <button class="invert-btn feedback main-button publish-btn"
+                                        id="publish_feedback">Publish
                                         Feedback</button>
                                 </div>
                             </div>
@@ -420,6 +423,15 @@
                 </div>
             </div>
             <div class="notify"></div>
+            <div class="dialog">
+                <div class="dialog-contents">
+                    <h1 class="dialog-question"></h1>
+                    <div class="dialog-buttons">  
+                        <button id="dialog_yes" class="main-button">Yes</button>
+                        <button id="dialog_no" class="main-button">No</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
