--- a/participate/event2.html
+++ b/participate/event2.html
@@ -236,7 +236,7 @@
                         }
                         console.log(i)
                         console.log(actions.length)
-                        if (i == (actions.length-1)) {
+                        if (i == (actions.length)) {
                             activeActionsDiv.innerHTML = "No Active Actions"
                         }
                     })
